<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CheckInFragment" android:id="@+id/frameLayout">


    <TextView
            android:text="Check-In"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp" android:textSize="40dp" android:textColor="#000000"
            android:textStyle="bold"/>
    <TextView
            android:text=" You can check=in by your ticket number or by entering the number we gave you while booking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
            android:textSize="20dp" android:textColor="#000000" android:layout_marginLeft="8dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="345dp"
            android:layout_height="41dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/name_et"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:hint="Ticket Number Here"
            android:textSize="20dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginLeft="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Your Name"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_et" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:text="*"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/editText2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="80dp"
            android:textColor="@color/red_dark2"
            android:textSize="20dp"/>
    <TextView
            android:text="*"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/name_et" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"></TextView>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:text="Check-In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkInButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.543"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.184"/>


</androidx.constraintlayout.widget.ConstraintLayout>