<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.airlines.HomeFragment">

    <LinearLayout
        android:orientation="vertical"
...
            android:textSize="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:text="Check-In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/checkinButton" android:textSize="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:text="Ratings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratingsButton" android:textSize="20dp"/>
    </LinearLayout>
...
